--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,32 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: echo "${{ github.event.head_commit.message }}" | tr '\n' ' '
+    - run: printenv
     - name: post a message to slack
       uses: ./
       env:
         INCOMING_WEBHOOK_URL: TEST_WEBHOOK_URL
       with:
         text: slack-incoming-webhook sample
-        attachments: |
-          [
-            {
-              "color": "good",
-              "author_name": "${{ github.actor }}",
-              "author_icon": "${{ github.event.sender.avatar_url }}",
-              "fields": [
-                {
-                  "title": "Commit Message",
-                  "value": "${{ env.COMMIT_MESSAGE }}"
-                },
-                {
-                  "title": "GitHub Actions URL",
-                  "value": "${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
-                },
-                {
-                  "title": "Compare URL",
-                  "value": "${{ github.event.compare }}"
-                }
-              ]
-            }
-          ]
