--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
-      - test
+      - main
 
 jobs:
   # test action works running from the graph  
